--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="container__search">
                     <input type="text" class="search__input" placeholder="   El tiempo en...">
                     <button class="search__button">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="button__search fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
 
